--- a/themes/stickeroverflow/_config.yml
+++ b/themes/stickeroverflow/_config.yml
@@ -1,3 +1,7 @@
+favicon: /favicon.ico
+
+store_url: /
+
 background: "//ox374gfao.bkt.clouddn.com/E996C845-C672-47F4-A418-E0DEBCA88296-4957-00000257C9BD5FF1_tmp.JPG"
 
 stickers:
