--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://stickeroverflow.netlify.com
 root: /
-permalink: :title/
+permalink: blog/:title/
 permalink_defaults:
 
 # Directory
@@ -78,3 +78,8 @@ theme: stickeroverflow
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type:
+
+feed:
+  type: atom
+  path: rss.xml
+  limit: 0
