--- a/themes/stickeroverflow/_config.yml
+++ b/themes/stickeroverflow/_config.yml
@@ -2,6 +2,8 @@ favicon: /favicon.ico
 
 store_url: https://item.taobao.com/item.htm?id=559967623589
 
+weibo_url: http://weibo.com/stickeroverflow
+
 background: "//ox374gfao.bkt.clouddn.com/E996C845-C672-47F4-A418-E0DEBCA88296-4957-00000257C9BD5FF1_tmp.JPG"
 
 stickers:
