--- a/themes/stickeroverflow/_config.yml
+++ b/themes/stickeroverflow/_config.yml
@@ -1,6 +1,6 @@
 favicon: /favicon.ico
 
-store_url: https://item.taobao.com/item.htm?id=559967623589
+store_url: https://weidian.com/s/1277943082
 
 weibo_url: http://weibo.com/stickeroverflow
 
