--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://stickeroverflow.netlify.com
+url: http://stickeroverflow.xyz
 root: /
 permalink: blog/:title/
 permalink_defaults:
@@ -77,7 +77,8 @@ theme: stickeroverflow
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@git.dev.tencent.com:djyde/stickeroverflow.git
 
 feed:
   type: atom
