--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "scripts": {
     "start": "hexo s",
-    "build": "hexo clean && hexo g"
+    "build": "hexo clean && hexo g",
+    "deploy": "hexo clean && hexo deploy"
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
